
11. DBInformation: support added for isc_info_active_tran_count and isc_info_creation_date.

12. DBInformation: New interfaces: IDIRB and IDIRBItem added to support DB Information
    requests with additional parameters. This is to enable support for fb_info_page_contents
    (return of page contents). Response to fb_info_page_contents returned as
    a string with code page CP_NONE.

FBINTF Change Log  version                             (1.1-0) Sun, 07 Jan 2018 15:20:02 +0000

1. Fix issues with setting SQL Param values using SetAsString with Numeric types.
   Scale is no longer ignored.

2. Fix issues with setting SQL Param values using SetAsString with Date values
   not in locale format but which are recognised by Firebird. Date values that
   cannot be converted to a string using Pascal library are now passed through
   to Firebird as Text Strings.

3. Lookup character set name by codepage amended to ensure that CP_UTF8 returns
   UTF8 and not UNICODE_FSS.

4. Charset ID problem. When using Firebird 3, with no default database character set
   and a column has a non-default collation specified, an incorrect character set
   id was being reported that could result in a 'division by zero' error when
   used by IBX. This has now been fixed.

5. Move GetCharsetName, CharSetID2CodePage, CodePage2CharSetID, CharSetName2CharSetID,
   CharSetWidth from IFirebirdAPI to IAttachment. This is a better data model as
   the character sets supported can be updated on a per database basis. That is
   it is possible to add a (Firebird) user defined character set to a database.

6. Add RegisterCharSet to IAttachment. This is used to register a user defined character
   set supported by Firebird with the API.

7. Add missing isc_info_db_read_only to list of decoded Database Information items
   in FBOutputBlock.pas and update test suite to include this item.

8. FB30Client: avoid always using "StartMultiple" when only a single database attachment.
