@@ -10,16 +10,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="75"/>
         <CursorPos X="16" Y="85"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit0>
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="328"/>
-        <CursorPos X="30" Y="338"/>
-        <UsageCount Value="132"/>
+        <TopLine Value="567"/>
+        <CursorPos X="31" Y="598"/>
+        <UsageCount Value="133"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -28,7 +28,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="106"/>
         <CursorPos Y="4"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
@@ -36,7 +36,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="50"/>
         <CursorPos X="26" Y="51"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test3.pas"/>
@@ -44,7 +44,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="78"/>
         <CursorPos X="71" Y="109"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test4.pas"/>
@@ -52,14 +52,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="104"/>
         <CursorPos Y="119"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test5.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="111"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit6>
       <Unit7>
         <Filename Value="Test6.pas"/>
@@ -67,13 +67,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="134"/>
         <CursorPos X="11" Y="161"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit8>
       <Unit9>
         <Filename Value="Test8.pas"/>
@@ -81,15 +81,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="62"/>
         <CursorPos X="96" Y="67"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit9>
       <Unit10>
         <Filename Value="Test9.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="27"/>
-        <CursorPos X="62" Y="46"/>
-        <UsageCount Value="132"/>
+        <TopLine Value="33"/>
+        <CursorPos X="91" Y="52"/>
+        <UsageCount Value="133"/>
+        <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test10.pas"/>
@@ -97,15 +97,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="86"/>
         <CursorPos X="34" Y="111"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <TopLine Value="49"/>
-        <CursorPos X="23" Y="62"/>
-        <UsageCount Value="132"/>
-        <Loaded Value="True"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="48"/>
+        <CursorPos X="17" Y="75"/>
+        <UsageCount Value="133"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
@@ -113,7 +113,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="102"/>
         <CursorPos X="54" Y="131"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit13>
       <Unit14>
         <Filename Value="Test13.pas"/>
@@ -128,7 +128,7 @@
           <TopLine Value="63"/>
           <CursorPos X="40" Y="102"/>
         </ExtraEditor1>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit14>
       <Unit15>
         <Filename Value="Test14.pas"/>
@@ -142,7 +142,7 @@
           <EditorIndex Value="-1"/>
           <CursorPos Y="4"/>
         </ExtraEditor1>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit15>
       <Unit16>
         <Filename Value="Test15.pas"/>
@@ -155,7 +155,7 @@
           <WindowIndex Value="1"/>
           <TopLine Value="91"/>
         </ExtraEditor1>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit16>
       <Unit17>
         <Filename Value="Test16.pas"/>
@@ -171,12 +171,12 @@
           <TopLine Value="110"/>
           <CursorPos Y="131"/>
         </ExtraEditor1>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit17>
       <Unit18>
         <Filename Value="Makefile.fpc"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="132"/>
+        <UsageCount Value="133"/>
       </Unit18>
       <Unit19>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
@@ -195,8 +195,8 @@
       <Unit21>
         <Filename Value="../client/FBOutputBlock.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="280"/>
-        <CursorPos X="40" Y="299"/>
+        <TopLine Value="958"/>
+        <CursorPos X="23" Y="990"/>
         <UsageCount Value="22"/>
       </Unit21>
       <Unit22>
@@ -209,8 +209,8 @@
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="140"/>
-        <CursorPos X="27" Y="164"/>
+        <TopLine Value="233"/>
+        <CursorPos Y="254"/>
         <UsageCount Value="29"/>
       </Unit23>
       <Unit24>
@@ -384,8 +384,9 @@
       <Unit48>
         <Filename Value="../include/consts_pub.inc"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="97"/>
-        <UsageCount Value="9"/>
+        <TopLine Value="315"/>
+        <CursorPos X="27" Y="326"/>
+        <UsageCount Value="10"/>
       </Unit48>
       <Unit49>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/systemh.inc"/>
@@ -420,8 +421,8 @@
       <Unit53>
         <Filename Value="../changelog"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="10"/>
-        <CursorPos X="37" Y="49"/>
+        <TopLine Value="19"/>
+        <CursorPos X="24" Y="52"/>
         <UsageCount Value="25"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
@@ -450,8 +451,8 @@
       <Unit57>
         <Filename Value="../include/inf_pub.inc"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="10"/>
-        <CursorPos X="21" Y="31"/>
+        <TopLine Value="104"/>
+        <CursorPos X="27" Y="136"/>
         <UsageCount Value="11"/>
       </Unit57>
       <Unit58>
@@ -705,15 +706,19 @@
         <UsageCount Value="9"/>
       </Unit93>
     </Units>
-    <JumpHistory Count="2" HistoryIndex="1">
+    <JumpHistory Count="3" HistoryIndex="2">
       <Position1>
-        <Filename Value="Test11.pas"/>
-        <Caret Line="62" Column="23" TopLine="49"/>
-      </Position1>
-      <Position2>
         <Filename Value="TestManager.pas"/>
         <Caret Line="34" Column="14" TopLine="13"/>
+      </Position1>
+      <Position2>
+        <Filename Value="Test9.pas"/>
+        <Caret Line="53" Column="12" TopLine="33"/>
       </Position2>
+      <Position3>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="40" Column="15" TopLine="20"/>
+      </Position3>
     </JumpHistory>
   </ProjectSession>
   <Debugging>
