@@ -48,6 +48,9 @@ FBINTF Change Log  version                                            (1.1-1) We
     (return of page contents). Response to fb_info_page_contents returned as
     a string with code page CP_NONE.
 
+13. DBInformation: Support for fb_info_pages_used and fb_info_pages_free added, plus
+    test suite updated.
+
 FBINTF Change Log  version                             (1.1-0) Sun, 07 Jan 2018 15:20:02 +0000
 
 1. Fix issues with setting SQL Param values using SetAsString with Numeric types.
